authelia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia        # < name of the deployment
  namespace: authelia # < namespace where place the deployment and pods
  labels:
    app: authelia       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: authelia
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: authelia
    spec:
      volumes:
      - name: authelia-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/authelia-config # < pvc name we created in the previous yaml
      containers:
      - image: authelia/authelia # < the name of the docker image we will use
        name: authelia                    # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "3000" # < group "user"
        - name: PUID
          value: "3000" # < user "docker"
        - name: TZ
          value: Europe/Brussels
        ports:                              # < the ports required (see container documentation)
         - containerPort: 9091
           name: web
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config               # < mount location in the container
           name: authelia-config                # < volumelabel configured earlier in the yaml file                # < subfolder in the nfs share to be mounted
