authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-service    # < name of the service
  namespace: authelia       # < namespace where place the deployment and pods
spec:
  selector:
    app: authelia          # < reference to the deployment (connects with this deployment)
  ports:
    - name: web
      protocol: TCP
      port: 9091
